--- a/Drop/en.lproj/MainStoryboard.storyboard
+++ b/Drop/en.lproj/MainStoryboard.storyboard
@@ -1,89 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Settings View Controller-->
-        <scene sceneID="xny-uu-Mhw">
-            <objects>
-                <viewController modalTransitionStyle="partialCurl" id="rLH-X2-dpA" customClass="SettingsViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4Jr-wV-gNP">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIP-VC-kFa" customClass="BButton">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="KT1-4k-vh5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                <size key="titleShadowOffset" width="0.0" height="1"/>
-                                <state key="normal" title="Log Out">
-                                    <color key="titleColor" red="0.26824700342465757" green="0.26824700342465757" blue="0.26824700342465757" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="logOutButtonPressed:" destination="rLH-X2-dpA" eventType="touchUpInside" id="BVn-q9-L8t"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ws-9O-fqW" customClass="BButton">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="Pdy-u0-2jC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                <size key="titleShadowOffset" width="0.0" height="1"/>
-                                <state key="normal" title="Dropbox Setup Test">
-                                    <color key="titleColor" red="0.26824700340000002" green="0.26824700340000002" blue="0.26824700340000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="setupButtonPressed:" destination="rLH-X2-dpA" eventType="touchUpInside" id="cvf-Yd-3NE"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnX-a4-wQn" customClass="BButton">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="qoF-sk-Tf5"/>
-                                    <constraint firstAttribute="width" constant="221" id="vR9-uq-gSQ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                <size key="titleShadowOffset" width="0.0" height="1"/>
-                                <state key="normal" title="Log Out of Dropbox">
-                                    <color key="titleColor" red="0.26824700340000002" green="0.26824700340000002" blue="0.26824700340000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="unlinkDropboxButtonPressed:" destination="rLH-X2-dpA" eventType="touchUpInside" id="UkI-OF-CIj"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="4ws-9O-fqW" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="BiW-LD-RiL"/>
-                            <constraint firstAttribute="trailing" secondItem="kIP-VC-kFa" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="XT2-4n-566"/>
-                            <constraint firstItem="pnX-a4-wQn" firstAttribute="leading" secondItem="4ws-9O-fqW" secondAttribute="leading" type="default" id="YQm-Iu-RtG"/>
-                            <constraint firstItem="4ws-9O-fqW" firstAttribute="leading" secondItem="kIP-VC-kFa" secondAttribute="leading" type="default" id="cIZ-Cb-eWq"/>
-                            <constraint firstAttribute="bottom" secondItem="kIP-VC-kFa" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="hfv-hc-gp1"/>
-                            <constraint firstItem="kIP-VC-kFa" firstAttribute="top" secondItem="4ws-9O-fqW" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="jjf-WW-JCk"/>
-                            <constraint firstAttribute="trailing" secondItem="pnX-a4-wQn" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="mZ7-E8-aia"/>
-                            <constraint firstItem="4ws-9O-fqW" firstAttribute="top" secondItem="pnX-a4-wQn" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ytG-K8-7Tb"/>
-                        </constraints>
-                    </view>
-                    <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wkG-U6-y6S" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1067" y="-239"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="4">
             <objects>
@@ -92,11 +12,11 @@
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MAA-y4-bbY"/>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rkk-lR-8k9">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="hE3-Ui-vwl"/>
-                                </constraints>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="MAA-y4-bbY">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="rkk-lR-8k9">
+                                <rect key="frame" x="703" y="940" width="50" height="51"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" image="settingsIcon.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -109,28 +29,63 @@
                                     <action selector="settingsButtonPressed:" destination="2" eventType="touchUpInside" id="q9e-uo-h71"/>
                                 </connections>
                             </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="mmm-Rz-Bdq">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem systemItem="flexibleSpace" id="QFo-FU-tKF"/>
+                                    <barButtonItem style="plain" id="dF9-0L-ibV">
+                                        <searchBar key="customView" contentMode="redraw" placeholder="Search for Files..." id="qbV-5K-nNI">
+                                            <rect key="frame" x="148" y="0.0" width="471" height="44"/>
+                                            <color key="tintColor" red="0.55013415130363663" green="0.76418566703796387" blue="0.52374910436487843" alpha="1" colorSpace="calibratedRGB"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="2" id="gn5-fO-7Dh"/>
+                                            </connections>
+                                        </searchBar>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="flexibleSpace" id="3HQ-Ee-h4b"/>
+                                </items>
+                                <color key="tintColor" red="0.55013415130363663" green="0.76418566703796387" blue="0.52374910436487843" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="MAA-y4-bbY" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="0nt-47-r2x"/>
-                            <constraint firstItem="MAA-y4-bbY" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="Ejg-EM-ZfI"/>
-                            <constraint firstAttribute="bottom" secondItem="rkk-lR-8k9" secondAttribute="bottom" constant="13" id="KfJ-49-zvq"/>
-                            <constraint firstItem="MAA-y4-bbY" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="PVm-74-6w5"/>
-                            <constraint firstAttribute="trailing" secondItem="rkk-lR-8k9" secondAttribute="trailing" constant="15" id="bEx-QF-gFq"/>
-                            <constraint firstItem="MAA-y4-bbY" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="w9z-j3-N8V"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="MAA-y4-bbY" id="vho-wO-0e4"/>
+                        <outlet property="searchBar" destination="qbV-5K-nNI" id="u9e-f0-rD8"/>
+                        <outlet property="searchController" destination="1uz-Ck-7gA" id="EA4-9T-08L"/>
+                        <outlet property="searchDisplayController" destination="1uz-Ck-7gA" id="w11-Je-NW3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="1uz-Ck-7gA">
+                    <connections>
+                        <outlet property="delegate" destination="2" id="RY5-Ax-eno"/>
+                        <outlet property="searchBar" destination="qbV-5K-nNI" id="GOs-6f-yZo"/>
+                        <outlet property="searchContentsController" destination="2" id="kWS-ND-cs7"/>
+                        <outlet property="searchResultsDataSource" destination="2" id="YGV-Bp-fnE"/>
+                        <outlet property="searchResultsDelegate" destination="2" id="f9T-b9-PDr"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
         </scene>
     </scenes>
     <resources>
         <image name="settingsIcon.png" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="settingsButtonPressed:"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+                <relationship kind="outlet" name="searchController" candidateClass="UISearchDisplayController"/>
+                <relationship kind="outlet" name="searchDisplayController" candidateClass="UISearchDisplayController"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
