--- a/Drop/en.lproj/MainStoryboard.storyboard
+++ b/Drop/en.lproj/MainStoryboard.storyboard
@@ -24,7 +24,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="MAA-y4-bbY">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="rkk-lR-8k9">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="rkk-lR-8k9">
                                 <rect key="frame" x="703" y="940" width="50" height="51"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" image="settingsIcon.png">
